--- a/client/views/landingpage.html
+++ b/client/views/landingpage.html
@@ -57,7 +57,7 @@
 
     <h1>tunefish
         <span>Sommerfest Vorstrasse feat. Spittaler Strasse</span>
-        <span><strong>12. + 13. Juni 2015</strong></span>
+        <span class="date">12. + 13. Juni 2015</span>
     </h1>
 
     <section class="intro">
