Add step information step x of 5 to the tabs Add informaton of first tab that there are more tabs

--- a/client/views/bands/check.html
+++ b/client/views/bands/check.html
@@ -87,3 +87,10 @@
     <div class="error">Das Abschließen der Bewerbung ist erst möglich, wenn die benötigten Schritte vollständig sind.</div>
     {% endif %}
 </div>
+
+
+<div class="hint">
+    <div class="hint-icon"><i class="i-help"></i></div>
+    Schritt 5 von 5<br />
+    Hier kannst du deine Bewerbung abschicken, damit wir sie dann sichten und ins Voting packen können. Nach dem Abschicken kannst du die Bewerbung nicht mehr verändern.
+</div>
