--- a/client/views/bands/profile.html
+++ b/client/views/bands/profile.html
@@ -76,3 +76,10 @@
 
     <input type="submit" value="Bandinfos senden">
 </form>
+
+
+<div class="hint">
+    <div class="hint-icon"><i class="i-help"></i></div>
+    Schritt 1 von 5<br />
+    Klick auf den Pfeil rechts oder benutze die rechte Pfeiltasten um zum nächsten Dialog zu kommen.
+</div>
