--- a/client/views/bands/techrider.html
+++ b/client/views/bands/techrider.html
@@ -35,5 +35,6 @@
 
 <div class="hint">
     <div class="hint-icon"><i class="i-help"></i></div>
+    Schritt 4 von 5<br />
     Damit wir euch später auf der Bühne richtig betreuen können, brauchen wir euren Techrider. Ihr könnt hier <strong>eine pdf-Datei</strong> hochladen.
 </div>
