--- a/client/views/bands/image.html
+++ b/client/views/bands/image.html
@@ -24,6 +24,7 @@
 
 <div class="hint">
     <div class="hint-icon"><i class="i-help"></i></div>
+    Schritt 3 von 5<br />
     Bitte stellt uns ein Bandfoto zur Verfügung, dass wir auf unsere Homepage zur Vorstellung eurer Band nutzen können.
     Dieses Foto muss als <strong>png, jpg oder gif</strong> vorliegen und sollte mindestens <strong>1000px breit</strong> sein.
 </div>
