--- a/client/views/bands/profile.html
+++ b/client/views/bands/profile.html
@@ -81,5 +81,5 @@
 <div class="hint">
     <div class="hint-icon"><i class="i-help"></i></div>
     Schritt 1 von 5<br />
-    Klick auf den Pfeil rechts oder benutze die rechte Pfeiltasten um zum nächsten Dialog zu kommen.
+    Klick' auf den Pfeil rechts, benutze die rechte Pfeiltasten oder "slide" nach rechts auf deinem Smartphone um zum nächsten Dialog zu kommen.
 </div>
