--- a/client/views/bands/profile.html
+++ b/client/views/bands/profile.html
@@ -79,7 +79,6 @@
 
 
 <div class="hint">
-    <div class="hint-icon"><i class="i-help"></i></div>
-    Schritt 1 von 5<br />
+    <div class="step-no"><span>1</span><span>5</span></div>
     Klick' auf den Pfeil rechts, benutze die rechte Pfeiltasten oder "slide" nach rechts auf deinem Smartphone um zum nächsten Dialog zu kommen.
 </div>
