--- a/client/views/landingpage.html
+++ b/client/views/landingpage.html
@@ -79,8 +79,8 @@
     </section>
 
     <a class="btn" href="/bands" title="Zur Bandbewerbung">Zur Bandbewerbung</a>
-    <div>
-        <small>Die Anmeldung ist kostenlos und mit keinerlei Spam verbunden!</small>
+    <div class="btn-text">
+        <small>Die Anmeldung ist <u>kostenlos</u> und <br/> mit <u>keinerlei Spam</u> verbunden!</small>
     </div>
 
     <p>
