--- a/client/src/scss/components/_profile-page.scss
+++ b/client/src/scss/components/_profile-page.scss
@@ -40,8 +40,8 @@
     }
 }
 
-.check-status {
-    float: right;
+.check-status,
+.step-no{
     width: 52px;
     height: 52px;
 
@@ -50,7 +50,49 @@
     @include breakpoint(m) {
         top: -5px;
     }
+}
 
+.step-no {
+    float: left;
+    font-size: 24px;
+    background-color: $dark;
+    color: $bg-primary;
+    border-radius: 50%;
+    padding: 5px;
+    margin-right: $space-half;
+    margin-top: -5px;
+    line-height: 42px;
+    font-weight: 300;
+    text-align: center;
+
+    span {
+        display: inline-block;
+        text-align: right;
+        width: 40%;
+
+
+        &:first-child {
+            text-align: left;
+
+            &:after {
+                content: ' ';
+                height: 32px;
+                width: 2px;
+                background-color: $bg-primary;
+                display: inline-block;
+                position: absolute;
+                transform: rotate(15deg);
+                left: 50%;
+                top: 50%;
+                margin-left: -1px;
+                margin-top: -16px;
+            }
+        }
+    }
+}
+
+.check-status {
+    float: right;
     i {
         color: $bg-primary;
         font-size: 32px;
@@ -102,32 +144,10 @@
 }
 
 .hint{
+    @include clearfix();
+    line-height: 1.3;
     padding-top: 15px;
     margin-top: 15px;
     border-top: 1px solid $dark;
     color: $dark;
-
-    .hint-icon{
-        float: left;
-        width: 60px;
-        height: 55px;
-
-        position: relative;
-
-        i {
-            color: $bg-primary;
-            font-family: $font-family;
-            font-size: 25px;
-            background-color: $dark;
-
-            display: inline-block;
-            padding: 10px 17px;
-            border-radius: 50%;
-        }
-
-    }
-}
-
-.i-help:before{
-    content: "?";
 }
