--- a/client/views/bands/check.html
+++ b/client/views/bands/check.html
@@ -90,7 +90,6 @@
 
 
 <div class="hint">
-    <div class="hint-icon"><i class="i-help"></i></div>
-    Schritt 5 von 5<br />
+    <div class="step-no"><span>5</span><span>5</span></div>
     Hier kannst du deine Bewerbung abschicken, damit wir sie dann sichten und ins Voting packen können. Nach dem Abschicken kannst du die Bewerbung nicht mehr verändern.
 </div>
