--- a/client/views/bands/techrider.html
+++ b/client/views/bands/techrider.html
@@ -34,7 +34,6 @@
 </form>
 
 <div class="hint">
-    <div class="hint-icon"><i class="i-help"></i></div>
-    Schritt 4 von 5<br />
+    <div class="step-no"><span>4</span><span>5</span></div>
     Damit wir euch später auf der Bühne richtig betreuen können, brauchen wir euren Techrider. Ihr könnt hier <strong>eine pdf-Datei</strong> hochladen.
 </div>
