--- a/client/views/landingpage.html
+++ b/client/views/landingpage.html
@@ -51,6 +51,7 @@
 
 <header>
     <div class="color-bar"></div>
+    <div class="application-bar">Bewerbungsfrist 01.03.2015</div>
 </header>
 
 <main class="main">
