--- a/client/views/vote/admin/band_view.html
+++ b/client/views/vote/admin/band_view.html
@@ -2,7 +2,10 @@
 {% from "_formhelpers.html" import renderMessages %}
 
 {% block body %}
-{{ renderMessages() }}
+
+<div id="messages" class="message-container">
+    {{ renderMessages() }}
+</div>
 
 <section class="main-content profile finish">
     <div class="row">
