--- a/client/views/vote/admin/overview.html
+++ b/client/views/vote/admin/overview.html
@@ -2,7 +2,12 @@
 {% from "_formhelpers.html" import renderMessages %}
 
 {% block body %}
-{{ renderMessages() }}
+
+<div id="messages" class="message-container">
+    {{ renderMessages() }}
+</div>
+
+
 
 <section class="main-content profile finish">
     <div class="row">
@@ -12,7 +17,8 @@
                     Administration
                     <h2>Administration</h2>
 
-                    <a href="{{ url_for('vote.admin.bands.list') }}">Bands</a>
+                    <a href="{{ url_for('vote.admin.bands.list') }}">Bands</a><br />
+                    <a href="{{ url_for('vote.admin.users.list') }}">Benutzer</a>
 
                 </div>
             </div>
