--- a/client/views/vote/band_list.html
+++ b/client/views/vote/band_list.html
@@ -14,9 +14,13 @@
                     <h2>Bandübersicht</h2>
 
                     {% for band in bands %}
-                    <div style="width: 100px; height: 100px; background-color: red;">
-                        {{ band.name }}
-                    </div>
+                    <a href="{{ url_for('vote.bands.view', band_id=band.id) }}">
+                        <div style="width: 200px; height: 200px; background: url('{{url_for('images.crop', filename=band.image, width=200, height=200)}}'); display: inline-block; margin: 10px; position: relative;">
+                            <div style="background-color: rgba(0,0,0, .5); width: 100%; position: absolute; bottom: 0; padding: 5px; text-align: center;">
+                                {{ band.name }}
+                            </div>
+                        </div>
+                    </a>
 
                     {% endfor %}
 
