--- a/client/views/vote/app.html
+++ b/client/views/vote/app.html
@@ -31,9 +31,12 @@
 </script>
 
 <script type="text/x-handlebars" id="band">
-
     <h2>Band {{ name }} ({{ vote_count }} Votes, {{ vote_average }})</h2>
-
+    <button {{action "vote" 1}}>Vote 1</button>
+    <button {{action "vote" 2}}>Vote 2</button>
+    <button {{action "vote" 3}}>Vote 3</button>
+    <button {{action "vote" 4}}>Vote 4</button>
+    <button {{action "vote" 5}}>Vote 5</button>
     <table style="width: 100%;">
         <tbody>
         <tr>
