--- a/client/views/vote/app.html
+++ b/client/views/vote/app.html
@@ -23,7 +23,7 @@
     {{#link-to "band" band.id }}
     <div style="width: 200px; height: 200px; background: url('{{ unbound band.thumbnail }}'); display: inline-block; margin: 10px; position: relative;">
         <div style="background-color: rgba(0,0,0, .5); width: 100%; position: absolute; bottom: 0; padding: 5px; text-align: center;">
-            {{ band.name }}
+            {{ band.name }} ( {{ band.own_vote }})
         </div>
     </div>
     {{/link-to}}
