[UPDATE/NEW] put ember_app.js into app-vote.js / create helpers-vote.js

--- a/client/views/vote_layout/layout_vote.html
+++ b/client/views/vote_layout/layout_vote.html
@@ -65,9 +65,9 @@
 </footer>
 
 <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
-<script src="{{ url_for('static', filename='js/plugins.js') }}"></script>
-<script src="{{ url_for('static', filename='js/lib/helpers.js') }}"></script>
-<script src="{{ url_for('static', filename='js/app.js') }}"></script>
+<script src="{{ url_for('static', filename='js/plugins-vote.js') }}"></script>
+<script src="{{ url_for('static', filename='js/lib/helpers-vote.js') }}"></script>
+<script src="{{ url_for('static', filename='js/app-vote.js') }}"></script>
 
 {% block inlinejs %}{% endblock %}
 </body>
