Return voted=true, if user has voted band

--- a/client/views/vote/app.html
+++ b/client/views/vote/app.html
@@ -51,8 +51,8 @@
         <tr>
             <td>Herkunft:</td>
             <td>{{ city }}<br/>
-                <img src="http://maps.googleapis.com/maps/api/staticmap?key=AIzaSyDRzrscCqKGd66mLS6jOayfUw9d4SICKOY&markers=Timbuktu&zoom=10&size=600x300&sensor=false"/>
-
+                <img src="http://maps.googleapis.com/maps/api/staticmap?key=AIzaSyDRzrscCqKGd66mLS6jOayfUw9d4SICKOY&markers={{ unbound city_encoded }}&zoom=10&size=600x300&sensor=false"/>
+                <button {{ action "calcDistance" }} id="calcDist">Calc dist</button> <span class="dist"></span>
             </td>
         </tr>
         <tr>
