--- a/client/views/vote/app.html
+++ b/client/views/vote/app.html
@@ -25,7 +25,7 @@
         <div id="" style="overflow-y: scroll; height:200px;">
             <ul>
                 {{#each track in tracks}}
-                <li>{{ track.trackname }}</li>
+                <li>{{ track.trackname }} {{ track.band.name }}</li>
                 {{/each}}
             </ul>
         </div>
@@ -40,7 +40,7 @@
     {{#link-to "band" band.id }}
     <div style="width: 200px; height: 200px; background: url('{{ unbound band.thumbnail }}'); display: inline-block; margin: 10px; position: relative;">
         <div style="background-color: rgba(0,0,0, .5); width: 100%; position: absolute; bottom: 0; padding: 5px; text-align: center;">
-            {{ band.name }} ( {{ band.own_vote }})
+            {{ band.name }} ( {{ band.ownVote }})
         </div>
     </div>
     {{/link-to}}
@@ -48,7 +48,7 @@
 </script>
 
 <script type="text/x-handlebars" id="band">
-    <h2>Band {{ name }} ({{ vote_count }} Votes, {{ vote_average }})</h2>
+    <h2>Band {{ name }} ({{ voteCount }} Votes, {{ voteAverage }})</h2>
     <button
     {{action "vote" 1}}>Vote 1</button>
     <button
@@ -86,18 +86,15 @@
     <h3>Tracks</h3>
     <ul>
         {{#each track in tracks }}
-        <li>
-            <audio
-            {{bind-attr src=track.url}} controls></audio>
+        <li ><a href="#" {{ action "addTrack" track }}>
             {{ track.trackname }}
-            <button
-            {{action "addTrack" track}}>Append</button>
+            </a>
         </li>
         {{/each}}
     </ul>
 
     <h3>Bandfoto</h3>
-    <img {{bind-attr src=image_url }} width="100%"/>
+    <img {{bind-attr src=image }} width="100%"/>
 
     <h3>Kommentare</h3>
     <table style="width: 100%;">
