--- a/client/views/vote/app.html
+++ b/client/views/vote/app.html
@@ -22,6 +22,9 @@
     <div style="position:fixed; top: 50px; right:0; width: 300px; height: 300px; background-color: #f0f0f0; z-index:9001;">
         <h5>hier könnte ihr audioplayer stehen</h5>
 
+        <audio {{bind-attr src=current.url }} controls></audio>
+        {{ current.url }}
+
         <div id="" style="overflow-y: scroll; height:200px;">
             <ul>
                 {{#each track in tracks}}
