--- a/client/src/scss/app.scss
+++ b/client/src/scss/app.scss
@@ -31,3 +31,21 @@
 @import "page/login";
 @import "page/messages";
 
+// TODO move somewhere else
+  .active {
+    color: fuchsia;
+  }
+
+  #idleCtrls.playing {
+    display: none;
+  }
+  #idleCtrls.idle {
+    display: block;
+  }
+
+  #playCtrls.playing {
+    display: block;
+  }
+  #playCtrls.idle {
+    display: none;
+  }
