--- a/client/views/vote/app.html
+++ b/client/views/vote/app.html
@@ -19,16 +19,41 @@
 
 {% raw %}
 <script type="text/x-handlebars" id="main">
-    <div style="position:fixed; top: 50px; right:0; width: 300px; height: 300px; background-color: #f0f0f0; z-index:9001;">
-        <h5>hier könnte ihr audioplayer stehen</h5>
+    <div style="position:fixed; top: 50px; right:0; width: 300px; height: 500px; background-color: #f0f0f0; z-index:9001;">
 
-        <audio {{bind-attr src=current.url }} controls></audio>
-        {{ current.url }}
+        {{#link-to "band" current.band.id }}
+        <div style="width: 200px; height: 200px; display: inline-block; margin: 10px; position: relative;" class="player">
+            <image {{ bind-attr src=current.band.thumbnail }} />
+            <div style="background-color: rgba(0,0,0, .5); width: 100%; position: absolute; bottom: 0; padding: 5px; text-align: center;">
+                {{ current.band.name }} ( {{ current.band.ownVote }})
+            </div>
+        </div>
+        {{/link-to}}
+        <br> Vote
+        <a href="#" {{action "vote" 1}}>1</a>
+        <a href="#" {{action "vote" 2}}>2</a>
+        <a href="#" {{action "vote" 3}}>3</a>
+        <a href="#" {{action "vote" 4}}>4</a>
+        <a href="#" {{action "vote" 5}}>5</a>
+
+        <audio {{bind-attr src=current.url }} id="tunefishPlayer"></audio>
+        <div id="playCtrls" {{bind-attr class="playerState"}} >
+        <a href="#" {{action "pause"}}>pause</a> ({{currentTime}} / {{currentDuration}})
+        </div>
+        <div id="idleCtrls" {{bind-attr class="playerState"}} >
+            <a href="#" {{action "play"}}>play</a>
+        </div>
+
+
+        <a href="#" {{action "prev"}}>prev</a>
+        <a href="#" {{action "next"}}>next</a>
 
         <div id="" style="overflow-y: scroll; height:200px;">
             <ul>
                 {{#each track in tracks}}
-                <li>{{ track.trackname }} {{ track.band.name }}</li>
+                {{#view "queueitem" track=track }}
+                {{ track.trackname }} {{ track.band.name }}
+                {{/view}}
                 {{/each}}
             </ul>
         </div>
@@ -52,16 +77,11 @@
 
 <script type="text/x-handlebars" id="band">
     <h2>Band {{ name }} ({{ voteCount }} Votes, {{ voteAverage }})</h2>
-    <button
-    {{action "vote" 1}}>Vote 1</button>
-    <button
-    {{action "vote" 2}}>Vote 2</button>
-    <button
-    {{action "vote" 3}}>Vote 3</button>
-    <button
-    {{action "vote" 4}}>Vote 4</button>
-    <button
-    {{action "vote" 5}}>Vote 5</button>
+    <a href="#" {{action "vote" 1}}>1</a>
+    <a href="#" {{action "vote" 2}}>2</a>
+    <a href="#" {{action "vote" 3}}>3</a>
+    <a href="#" {{action "vote" 4}}>4</a>
+    <a href="#" {{action "vote" 5}}>5</a>
     <table style="width: 100%;">
         <tbody>
         <tr>
