Fix amount of members

--- a/client/views/vote/app.html
+++ b/client/views/vote/app.html
@@ -87,7 +87,7 @@
         <tbody>
         <tr>
             <td>Mitglieder:</td>
-            <td>{{ amount_members }}</td>
+            <td>{{ members }}</td>
         </tr>
         <tr>
             <td>Herkunft:</td>
