--- a/client/views/vote_layout/layout_vote.html
+++ b/client/views/vote_layout/layout_vote.html
@@ -7,7 +7,7 @@
 
     <title>tunefish</title>
 
-    <link href="{{ url_for('static', filename='css/app.min.css') }}" type="text/css" rel="stylesheet"/>
+    <link href="{{ url_for('static', filename='css/app-vote.min.css') }}" type="text/css" rel="stylesheet"/>
 
     <!-- WEBFONT CACHING -->
     <script type="text/javascript">
