Add all tracks of band to queue

--- a/client/views/vote/app.html
+++ b/client/views/vote/app.html
@@ -131,7 +131,7 @@
         </tbody>
     </table>
 
-    <h3>Tracks</h3>
+    <h3>Tracks</h3>     <a href="#" {{ action "addAllTracks" }}>Add all tracks to queue</a>
     <ul>
         {{#each track in tracks }}
         <li ><a href="#" {{ action "addTrack" track }}>
